--- a/fcc-portfolio.html
+++ b/fcc-portfolio.html
@@ -7,19 +7,33 @@
         <link rel="stylesheet" href="styles/header.css">
         <link rel="stylesheet" href="styles/footer.css">
         <link rel="stylesheet" href="styles/main.css">
+        <link rel="stylesheet" href="styles/hero.css">
+        <link rel="stylesheet" href="styles/general.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,300&display=swap" rel="stylesheet">
     </head>
     <body>
-        <nav>
-            <a href="#About">
-                <p>About</p>
-            </a>
-            <a href="#Work">
-                <p>Work</p>
-            </a>
-            <a href="#Contain">
-                <p>Contain</p>
-            </a>
-        </nav>
+        <div class="navigation">
+            <nav>
+                <a href="#About">
+                    <p>About</p>
+                </a>
+                <a href="#Work">
+                    <p>Work</p>
+                </a>
+                <a href="#Contact">
+                    <p>Contact</p>
+                </a>
+            </nav>
+        </div>
+            
+        <div class="hero">
+            <div class="hero-container">
+                <h1 class="name">Hey I am Tuan</h1>
+                <h2 class="title">a web developer</h2>
+            </div>
+        </div>
         <main>
 
         </main>
