working on the display of projects

--- a/fcc-portfolio.html
+++ b/fcc-portfolio.html
@@ -28,14 +28,67 @@
             </nav>
         </div>
             
-        <div class="hero">
+        <div class="hero" id="About">
             <div class="hero-container">
                 <h1 class="name">Hey I am Tuan</h1>
                 <h2 class="title">a web developer</h2>
             </div>
         </div>
         <main>
+            <div class="title-container" id="Work">
+                <h1 class="project-title">These are some of my projects</h1>
+            </div>
+            <div class="grid-container">
+                <div class="grid-cell">
+                    <div class="image-contain">
+                        <img src="images/tribute.jpg" alt="tribute-page" class="image">
+                        <div class="grid-title">
+                            <h3>Tribute Page</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-cell">
+                    <div class="image-contain">
+                        <img src="images/random-quote-machine.png" alt="quote-generator" class="image">
+                        <div class="grid-title">
+                            <h3>Random Quote Machine</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-cell">
+                    <div class="image-contain">
+                        <img src="images/calc.png" alt="calculator" class="image">
+                        <div class="grid-title">
+                            <h3>Javascript Calculator</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-cell">
+                    <div class="image-contain">
+                        <img src="images/map.jpg" alt="map" class="image">
+                        <div class="grid-title"> 
+                            <h3>Map Data Across the Globe</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-cell">
+                    <div class="image-contain">
+                        <img src="images/wiki.png" alt="wiki-page" class="image">
+                        <div class="grid-title">
+                            <h3>Wikipedia Viewer</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-cell">
+                    <div class="image-contain">
+                        <img src="images/tic-tac-toe.png" alt="tic-tac-toe" class="image">
+                        <div class="grid-title">
+                            <h3>Tic Tac Toe Game</h3>
+                        </div>
+                    </div>
+                </div>
 
+            </div>
         </main>
         <footer>
 
