--- a/fcc-portfolio.html
+++ b/fcc-portfolio.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="styles/general.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <script src="https://kit.fontawesome.com/5a75e0f2de.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,300&display=swap" rel="stylesheet">
     </head>
     <body>
@@ -41,17 +42,21 @@
             <div class="grid-container">
                 <div class="grid-cell">
                     <div class="image-contain">
-                        <img src="images/tribute.jpg" alt="tribute-page" class="image">
+                        <img src="images/tribute.jpg" alt="tribute-page" class="image" id="tribute">
                         <div class="grid-title">
+                            <div class="less">&lt;</div>
                             <h3>Tribute Page</h3>
+                            <div class="great">/&gt;</div>
                         </div>
                     </div>
                 </div>
                 <div class="grid-cell">
                     <div class="image-contain">
-                        <img src="images/random-quote-machine.png" alt="quote-generator" class="image">
+                        <img src="images/random-quote-machine.png" alt="quote-generator" class="image" id="quote">
                         <div class="grid-title">
+                            <div class="less">&lt;</div>
                             <h3>Random Quote Machine</h3>
+                            <div class="great">/&gt;</div>
                         </div>
                     </div>
                 </div>
@@ -59,7 +64,9 @@
                     <div class="image-contain">
                         <img src="images/calc.png" alt="calculator" class="image">
                         <div class="grid-title">
+                            <div class="less">&lt;</div>
                             <h3>Javascript Calculator</h3>
+                            <div class="great">/&gt;</div>
                         </div>
                     </div>
                 </div>
@@ -67,7 +74,9 @@
                     <div class="image-contain">
                         <img src="images/map.jpg" alt="map" class="image">
                         <div class="grid-title"> 
+                            <div class="less">&lt;</div>
                             <h3>Map Data Across the Globe</h3>
+                            <div class="great">/&gt;</div>
                         </div>
                     </div>
                 </div>
@@ -75,7 +84,9 @@
                     <div class="image-contain">
                         <img src="images/wiki.png" alt="wiki-page" class="image">
                         <div class="grid-title">
+                            <div class="less">&lt;</div>
                             <h3>Wikipedia Viewer</h3>
+                            <div class="great">/&gt;</div>
                         </div>
                     </div>
                 </div>
@@ -83,15 +94,34 @@
                     <div class="image-contain">
                         <img src="images/tic-tac-toe.png" alt="tic-tac-toe" class="image">
                         <div class="grid-title">
+                            <div class="less">&lt;</div>
                             <h3>Tic Tac Toe Game</h3>
+                            <div class="great">/&gt;</div>
                         </div>
                     </div>
                 </div>
-
+                
+            </div>
+            <div class="button-show">
+                <button class="show">Show all</button>
+                <div>&gt;</div>
             </div>
         </main>
-        <footer>
-
+        <footer id="Contact">
+            <div class="work">
+                <h3>Let's work together...</h3>
+                <h5>How do you take your coffee?</h5>
+                <div class="icons">
+                    <div>LinkedIn <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></div>
+                    <div>GitHub <i class="fa-brands fa-square-github" style="color: #ffffff;"></i></div>
+                    <div>Send a mail <i class="fa-regular fa-envelope"></i></div>
+                    <div>Call me <i class="fa-solid fa-phone" style="color: #ffffff;"></i></div>
+                    <div>Resume <i class="fa-solid fa-paperclip" style="color: #ffffff;"></i></div>
+                </div>
+            </div>
+            <div class="fake">
+                <div><p class="copyright"><i class="fa-regular fa-copyright"></i> 2023 Tuan</p></div>
+            </div>
         </footer>
     </body>
 </html>
